# cntlm-gss

./: .gitignore  CMakeLists.txt  Makefile  Makefile.xlc  README.md  VERSION  acl.c  auth.c  auth.h  config-file.c  config-file.h  config.h.in  configure  direct.c  forward.c  forward.h  http.c  kerberos.c  kerberos.h  main.c  ntlm.c  pages.c  pages.h  scanner.c  socket.h  swap.h  utils.c  utils.h
cmake/: systemd.cmake
config/: big_endian.c  have_gethostname.c  have_socklen_t.c  have_strdup.c
doc/: add-user-keytab.sh  cntlm-gss.conf  cntlm-gss.service.in  cntlm.1  cntlm.conf.in  cntlm.service.in
gssapi-stub/: CMakeLists.txt  README.md  libgssapi_krb5-stub.c  mk-lib-stub.sh
